# dls-pmac-analyse

./: .gitignore  Makefile  Pipfile  README.rst  setup.cfg  setup.py
dls_pmacanalyse/: __init__.py  analyse.py  configfilereader.py  constants.py  difference.py  dls_pmacanalyse.py  dls_pmacanalyse2.py  dls_pmacanalyse_new.py  dls_ppmacanalyse.py  factorySettings_pmac.pmc  formAnalyseControl.ui  formLogin.ui  globalconfig.py  globalconfig_old.py  login.py  pmac.py  pmaclexer.py  pmacparser.py  pmacprogram.py  pmacstate.py  pmacvariables.py  ppmacanalyse_control.py  report.py  ui_formAnalyseControl.py  ui_formLogin.py  utils.py  webpage.py
dls_pmacanalyse/ignore/: ignore
dls_pmacanalyse/test/: FillAllDataStructuresIndices_ExpectedOutput.txt  FillAllDataStructuresIndices_IgnoreList.txt  FillAllDataStructuresIndices_UnindexedDSs.txt  PPMACsoftwareRef_22032021_DataStructures.txt  PPMACsoftwareRef_25102016_DataStructures.txt
docs/: conf.py  index.rst
documentation/: manual.src
jinja/: analysis.css  compare.htm.jinja  coordsystems.htm.jinja  index.htm.jinja  ivariables.htm.jinja  msivariables.htm.jinja  plcs.htm.jinja  prog.htm.jinja  programs.htm.jinja  subindex.htm.jinja  variables.htm.jinja
tests/: test_ppmacanalyse.py  test_system.py  test_test_python.py  test_units.py
tests/BL08J/: BL08J-MO-STEP-01.unfix  BL08J-MO-STEP-02.unfix  BL08J-MO-STEP-02.unfix.pmc  BL08J-MO-STEP-06.unfix  BL08J-MO-STEP-07.unfix  README_Geobrick_naming  analyse.cfg  analyse.ini
tests/BL08J/BL08J-MO-STEP-01/: BiSS setup.pmc  Master.pmc
tests/BL08J/BL08J-MO-STEP-02/: Master.pmc
tests/BL08J/BL08J-MO-STEP-06/: Master.pmc
tests/BL08J/BL08J-MO-STEP-07/: Master.pmc
tests/BL08J/Common/: BRICK_M_variables_BAD.pmc  BRICK_M_variables_README.txt  Briquette_New_Patch.pmc  GB_ECT_Default.56K  GB_ECT_Default.MAP  GB_Startup.56K  GB_Startup.MAP  GB_Startup.PMA  GB_Startup.TBL  GB_Startup.pmc  Initial_offset_file_location.txt  PMAC_M_variables.pmc  clear_PLC_CS.pmc
tests/BL08J/pmacAnalysisOriginal/: BL08J-MO-STEP-01_compare.htm  (+344 more)
tests/data/: plc1.listing.py  plc1.pmc
(+85 files in other folders)
