[metadata]
name = dls_pmacanalyse
version = file: dls_pmacanalyse/VERSION
author = 'Jon Thompson',
author_email = 'giles.knap@diamond.ac.uk',
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = dls_pmacanalyse
include_package_data = True
install_requires =
    dls-pmaclib

[options.package_data]
dls_pmacanalyse = VERSION

[options.entry_points]
console_scripts =
    dls-pmac-analyse.py = dls_pmacanalyse.dls_pmacanalyse:main
