[metadata]
name = dls_pmacanalyse
author = 'Jon Thompson',
author_email = 'giles.knap@diamond.ac.uk',
license = Apache License 2.0
description = 'Ananlyse configuration of geobricks'
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
# packages = dls_pmacanalyse
include_package_data = True
install_requires =
    dls-pmaclib == 3.0.0b2
    scp
    numpy

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests, .history

[options.entry_points]
console_scripts =
    dls-pmac-analyse.py = dls_pmacanalyse.dls_pmacanalyse:main
    dls-ppmac-analyse.py = dls_pmacanalyse.ppmacanalyse_control:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip=setup.py,conf.py,.history

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --black --mypy
